# PCP-Copilot-Dashboard

PCP/: README.md
PCP/scripts/: collect_logs.bat  collect_logs.sh  monitor_logs.bat  start_with_logging.sh  tail_logs.bat
PCP/src/: .env  docker-compose.yml
PCP/src/grafana/: DASHBOARD_README.md  generate_dashboard.py  update_dashboard.py
PCP/src/grafana/config/: grafana.ini
PCP/src/grafana/provisioning/dashboards/: README.md  dashboard.yml
PCP/src/grafana/provisioning/dashboards/json/: .gitkeep  pcp-auto-dashboard.json  pcp-metrics.json
PCP/src/grafana/provisioning/dashboards/json_disabled/: system-metrics.json
PCP/src/grafana/provisioning/datasources/: influxdb.yml
PCP/src/influxdb/: README.md
PCP/src/logs/pcp_parser/: metrics_labels.csv
PCP/src/logs/pcp_parser_go/: metrics_labels.csv
PCP/src/logs/pcp_parser_python/: validated_metrics.txt
PCP/src/pcp_parser/: Dockerfile  pcp_parser.py
PCP/src/pcp_parser_go/: Dockerfile  README.md  go.mod  main.go
PCP/src/pcp_parser_rust/: Cargo.toml  Dockerfile
PCP/src/pcp_parser_rust/src/: main.rs
PCP/src/web_pcp_ctrl/: Dockerfile  app.py
PCP/src/web_pcp_ctrl/templates/: index.html
